Fix text overflow issue on mobile

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@
 .about {
   background: #284b63;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
 }
 
 .about-title {
